
Version 2.1.17
    Fixed a logic error that resulted in Drowned giving no XP
    Fixed a bug that resulted in mob spawner entities to not be marked for no xp after being transforming into Drowned

Version 2.1.16
    Breaking Kelp should now count the whole plant for XP
    Spawned Mobs that are not supposed to award XP will no longer reward XP once transformed (ie: drowned)

Version 2.1.15
    Fixed a bug where a max rank of Fuel Efficiency would cause its benefits to be lost

Version 2.1.14
    Added a config option to toggle double drops for Silk Touch pickaxes (advanced.yml "Skills.Mining.DoubleDrops.SilkTouch"
    Mycelium removed from Woodcutting XP tables (because its soil!)
    Kelp added to Herbalism XP tables
    mcMMO now flags blocks moved by piston as not natural to prevent automated XP farms
    Fixed a bug where Fuel Efficiency was way too good
    Fixed a display issue with Fisherman's Diet
    Fuel Efficiency now uses the rank system
    Removed Fuel Efficiency config options in advanced.yml
    Added Tropical Fish, Raw Cod, Raw Salmon to the list of foods that benefit from Fisherman's Diet

Version 2.1.13
    Fixed a bug where Archery's Arrow Retrieval was using the wrong permission node

Version 2.1.12
    Salvage config entries are no longer case sensitive
    Fixed a bug where Fishing was not rewarding vanilla XP orbs

Version 2.1.11
    Fixed a bug where Rupture was using the wrong permission node (new permission node: mcmmo.ability.swords.rupture)

Version 2.1.10
    Fishing command did an oopsie
    Endstone now gives the same XP as Stone (update your experience.yml)

Version 2.1.9
    Fixed a bug where grabbing the version of WG would throw classnotdefined errors

Version 2.1.8
    mcMMO now checks for WG 7 before attempting to use the WG API
    Made some optimizations for our WG integration
    Fixed a bug where Bite chance for Master Angler was displaying too many decimal places